# loxcraft

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  pages.yml
benches/: lang.rs
benchmarks/: binary_trees.lox  equality.lox  fib.lox  instantiation.lox  invocation.lox  method_call.lox  properties.lox  string_equality.lox  trees.lox  zoo.lox
crates/lox-common/: Cargo.toml
crates/lox-common/src/: error.rs
crates/lox-interpreter/: Cargo.toml
crates/lox-interpreter/src/: env.rs  error.rs  interpreter.rs  lib.rs  object.rs  resolver.rs
crates/lox-interpreter/src/object/: callable.rs  class.rs  function.rs  instance.rs  mod.rs  native.rs
crates/lox-lsp/: Cargo.toml
crates/lox-lsp/src/: lib.rs
crates/lox-playground/: .gitignore  Cargo.toml  build.rs
crates/lox-playground/res/: index.html  lox.js  lox.wasm  worker.js
crates/lox-playground/src/: lib.rs  main.rs
crates/lox-playground/ui/: .gitignore  package-lock.json  package.json
crates/lox-playground/ui/lox-wasm/: Cargo.toml
crates/lox-playground/ui/lox-wasm/src/: lib.rs
crates/lox-repl/: Cargo.toml
crates/lox-repl/src/: lib.rs
crates/lox-syntax/: Cargo.toml  build.rs
crates/lox-syntax/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs
crates/lox-vm/: Cargo.toml  build.rs
crates/lox-vm/benches/: lang.rs
crates/lox-vm/src/: allocator.rs  chunk.rs  compiler.rs  gc.rs  intern.rs  lib.rs  main.rs  object.rs  op.rs  util.rs  value.rs  vm.rs
crates/lox-vm/tests/: lang.rs
crates/lox-wasm/: .gitignore  Cargo.toml
crates/lox-wasm/src/: lib.rs
crates/tree-sitter-lox/: .gitattributes  .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json
crates/tree-sitter-lox/bindings/node/: binding.cc  index.js
crates/tree-sitter-lox/bindings/rust/: lib.rs
crates/tree-sitter-lox/queries/: highlights.scm  locals.scm
crates/tree-sitter-lox/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-lox/test/highlight/: class.lox  function.lox
docs/: LSP-design-lox.md
examples/: unexpected_character.lox
examples/assignment/: associativity.lox  infix_operator.lox
examples/call/: nil.lox  num.lox  object.lox
examples/class/: empty.lox
examples/comments/: unicode.lox
examples/constructor/: call_init_explicitly.lox  extra_arguments.lox  missing_arguments.lox  return_value.lox
examples/expressions/: parse.lox
examples/field/: get_and_set_method.lox  set_evaluation_order.lox
examples/for/: closure_in_body.lox  return_inside.lox  statement_condition.lox  syntax.lox
examples/function/: extra_arguments.lox  local_mutual_recursion.lox  print.lox  recursion.lox  too_many_arguments.lox
examples/inheritance/: inherit_from_number.lox
examples/limit/: loop_too_large.lox  no_reuse_constants.lox  stack_overflow.lox  too_many_constants.lox  too_many_locals.lox  too_many_upvalues.lox
examples/method/: extra_arguments.lox  missing_arguments.lox  print_bound_method.lox  too_many_arguments.lox  too_many_parameters.lox
examples/number/: literals.lox  nan_equality.lox  trailing_dot.lox
examples/operator/: add_bool_nil.lox  divide.lox  divide_nonnum_num.lox  divide_num_nonnum.lox  equals_class.lox  greater_nonnum_num.lox  greater_or_equal_nonnum_num.lox  less_nonnum_num.lox  less_num_nonnum.lox  not_class.lox
examples/regression/: 40.lox
examples/return/: after_else.lox  after_while.lox  at_top_level.lox  in_method.lox
examples/string/: error_after_multiline.lox  literals.lox  multiline.lox  unterminated.lox
examples/super/: call_other_method.lox  no_superclass_call.lox  super_at_top_level.lox
examples/this/: this_at_top_level.lox  this_in_top_level_function.lox
examples/variable/: collide_with_parameter.lox  early_bound.lox  shadow_and_local.lox  shadow_local.lox  unreached_undefined.lox  use_global_in_initializer.lox  use_this_as_var.lox
examples/while/: return_inside.lox
playground/: .eslintignore  .eslintrc.js  .gitignore  .parcelrc  .prettierignore  components.json  justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json
playground/app/: globals.css  layout.tsx  page.tsx  worker.ts
playground/rust/lox-wasm/: .gitignore  Cargo.toml  justfile
playground/rust/lox-wasm/src/: lib.rs
playground/src/: index.css  index.html  index.tsx  worker.ts
playground/src/pages/: playground.tsx
res/: grammar.lalrpop
res/benchmarks/: fib.lox  invocation.lox  string_equality.lox
res/examples/assignment/: grouping.lox  syntax.lox  undefined.lox
res/examples/bool/: equality.lox  not.lox
res/examples/call/: object.lox
res/examples/class/: inherit_self.lox  local_inherit_self.lox
res/examples/closure/: assign_to_closure.lox  closed_closure_in_function.lox  nested_closure.lox  reuse_closure_slot.lox  unused_later_closure.lox
res/examples/comments/: line_at_eof.lox
res/examples/constructor/: arguments.lox  call_init_early_return.lox  default_arguments.lox  init_not_method.lox  missing_arguments.lox
res/examples/field/: get_on_class.lox  many.lox  method.lox  on_instance.lox  set_evaluation_order.lox  set_on_string.lox
res/examples/for/: class_in_body.lox  statement_initializer.lox  var_in_body.lox
res/examples/function/: body_must_be_block.lox  missing_arguments.lox  parameters.lox  too_many_parameters.lox
res/examples/if/: class_in_else.lox  dangling_else.lox  if.lox  var_in_then.lox
res/examples/inheritance/: inherit_methods.lox  set_fields_from_base_class.lox
res/examples/logical_operator/: and_truth.lox
src/: app.rs  ast.rs  cmd.rs  error.rs  lexer.rs  lib.rs  lsp.rs  main.rs  playground.rs  repl.rs  token.rs  types.rs  vm.rs
src/syntax/: ast.rs  grammar.lalrpop  grammar.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/vm/: allocator.rs  chunk.rs  compiler.rs  gc.rs  mod.rs  native.rs  object.rs  op.rs  util.rs  value.rs  vecmap.rs  vm.rs
tests/: lang.rs
tests/lang/: precedence.lox
xtask/: Cargo.toml
xtask/src/: main.rs
(+194 files in other folders)
