[package]
authors = [
    "Ajeet D'Souza <98ajeet@gmail.com>",
    "Kartik Sharma <kartik.sharma522@gmail.com>",
]
categories = ["development-tools"]
description = "A compiler, VM, language server, and online playground for the Lox programming language"
edition = "2024"
keywords = [
    "cli",
    "compiler",
    "interpreter",
    "language",
    "lox",
    "lsp",
    "parser",
    "parsing",
    "script",
    "scripting",
    "vm",
    "wasm",
    "webassembly",
]
license = "MIT"
name = "loxcraft"
repository = "https://github.com/ajeetdsouza/loxcraft"
version = "0.1.1"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["lsp", "repl"]
gc-off = []
gc-stress = []
gc-trace = []
lsp = ["dep:tokio", "dep:tower-lsp"]
playground = ["dep:rust-embed", "dep:warp", "dep:warp-embed", "dep:webbrowser"]
repl = [
    "dep:dirs",
    "dep:nu-ansi-term",
    "dep:reedline",
    "dep:tree-sitter",
    "dep:tree-sitter-highlight",
    "dep:tree-sitter-lox",
]
vm-trace = []

[dependencies]
anyhow = "1.0.52"
arrayvec = "0.7.2"
clap = { version = "4.0.0", features = ["derive"] }
codespan-reporting = "0.13.1"
dirs = { version = "6.0.0", optional = true }
hashbrown = { version = "0.17.0", default-features = false, features = [
    "inline-more",
    "raw-entry",
] }
iota = "0.2.2"
lalrpop-util = "0.23.1"
logos = "0.16.1"
nu-ansi-term = { version = "0.50.0", optional = true }
reedline = { version = "0.46.0", optional = true }
rust-embed = { version = "8.4.0", features = ["compression"], optional = true }
rustc-hash = "2.1.2"
termcolor = "1.1.3"
thiserror = "2.0.18"
tokio = { version = "1.17.0", features = ["io-std", "rt"], optional = true }
tower-lsp = { version = "0.20.0", optional = true }
tree-sitter = { version = "0.20.4", optional = true }
tree-sitter-highlight = { version = "0.20.1", optional = true }
tree-sitter-lox = { version = "0.1.0", optional = true }
warp = { version = "0.3.7", optional = true }
warp-embed = { version = "0.5.0", optional = true }
webbrowser = { version = "1.0.2", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[target.'cfg(not(any(miri, target_family = "wasm")))'.dependencies]
mimalloc = { version = "0.1.27", default-features = false }

[build-dependencies]
build-deps = "0.1.4"
lalrpop = { version = "0.23.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1.1.0"
test-generator = "0.3.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = true
