[package]
name = "lox-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
gc = { version = "0.4.1", features = ["derive"] }
lox-common = { path = "../lox-common" }
lox-syntax = { path = "../lox-syntax" }
rustc-hash = "1.1.0"
termcolor = "1.1.3"
thiserror = "1.0.32"
