[package]
name = "lox-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
lox-common = { path = "../lox-common" }
lox-interpreter = { path = "../lox-interpreter" }
lox-syntax = { path = "../lox-syntax" }
tokio = { version = "1.17.0", features = ["io-std", "rt"] }
tower-lsp = "0.17.0"
