[package]
name = "lox-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dirs.workspace = true
lox-common.path = "../lox-common"
lox-syntax.path = "../lox-syntax"
lox-vm.path = "../lox-vm"
nu-ansi-term.workspace = true
reedline.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-lox.path = "../tree-sitter-lox"
