[package]
name = "lox-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-gc = []
disable-gc = []
stress-gc = []
debug-trace = []

[dependencies]
arrayvec.workspace = true
hashbrown.workspace = true
iota.workspace = true
lox-common.path = "../lox-common"
lox-syntax.path = "../lox-syntax"
rustc-hash.workspace = true

[target.'cfg(not(any(miri, target_family = "wasm")))'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
test-generator.workspace = true
