[package]
name = "lox-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "lang"
harness = false

[features]
gc-off = []
gc-stress = []
gc-trace = []
pprof = ["dep:pprof"]
vm-trace = []

[dependencies]
arrayvec.workspace = true
hashbrown.workspace = true
iota.workspace = true
lox-common.path = "../lox-common"
lox-syntax.path = "../lox-syntax"
pprof = { optional = true, workspace = true }
rustc-hash.workspace = true

[target.'cfg(not(any(miri, target_family = "wasm")))'.dependencies]
mimalloc.workspace = true

[build-dependencies]
build-deps.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
test-generator.workspace = true
