[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codespan-reporting = "0.11.1"
console_error_panic_hook = "0.1.1"
lox-syntax = { path = "../lox-syntax" }
lox-vm = { path = "../lox-vm" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["MessagePort"] }
