[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama_escape.workspace = true
console_error_panic_hook.workspace = true
lox-common.path = "../lox-common"
lox-vm.path = "../lox-vm"
serde.workspace = true
serde_json.workspace = true
termcolor.workspace = true
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
