[package]
name = "tree-sitter-lox"
description = "Lox grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "lox"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ajeetdsouza/tree-sitter-lox"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.4"

[build-dependencies]
cc = "1.0.73"
