[package]
build = "bindings/rust/build.rs"
categories = ["parsing", "text-editors"]
description = "Lox grammar for the tree-sitter parsing library"
edition = "2018"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
keywords = ["incremental", "parsing", "lox"]
license = "MIT"
name = "tree-sitter-lox"
repository = "https://github.com/ajeetdsouza/tree-sitter-lox"
version = "0.1.0"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.4"

[build-dependencies]
cc = "1.0.73"
