[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama_escape = "0.10.3"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
wasm-bindgen = "0.2.84"
loxcraft = { path = "../../../", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
