[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ansi-to-html = "0.1.0"
console_error_panic_hook = "0.1.1"
lox-syntax = { path = "../../../lox-syntax" }
lox-vm = { path = "../../../lox-vm" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = "0.2.80"

[workspace]
