[package]
name = "lox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama_escape = "0.10.3"
console_error_panic_hook = "0.1.1"
lox-syntax = { path = "../../../lox-syntax" }
lox-vm = { path = "../../../lox-vm" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
termcolor = "1.1.3"
wasm-bindgen = "0.2.80"

[workspace]

[profile.release]
codegen-units = 1
lto = true
